fix(build,cloud-ops,arrow): clear the next CI wall after autostyle
With autostyle and rat green, CI moved on to checkstyle and the JDK 8
compile:

- arrow/GandivaAvailability javadoc had a 103-character line. Wrap it.

- The same file and GandivaEvaluators were reported over the limit only
  on Windows, at +2 characters, because Checkstyle decoded them with the
  platform charset and counted the UTF-8 em-dash as three characters.
  Pin the Checker charset to UTF-8 so all platforms agree.

- cloud-ops used List.of / Map.of / Set.of, which are Java 9+, so the
  JDK 8 job failed to compile it (CLAUDE.md rule 1). Replace with the
  Guava immutable collections the module already uses, and the two
  List.of(x).stream() calls with Stream.of / Stream.empty.

Verified: :arrow:compileJava, :arrow:checkstyleMain, :cloud-ops:compileJava
and :cloud-ops:compileTestJava all pass.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>